03-eks-setup/sg.tf
resource "aws_security_group" "terraform_eks_cluster_sg" {
  name_prefix = "terraform_eks-cluster-sg-"
  vpc_id      = aws_vpc.terraform_vpc.id
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "terraform_rds_postgres_sg" {
  name_prefix = "terraform_eks-cluster-sg-"
  vpc_id      = aws_vpc.terraform_vpc.id
  ingress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
